--- a/test.css
+++ b/test.css
@@ -27,8 +27,8 @@
 }*/
 
 .size {
-  width: 200;
-  height: 200;
+  width: 200px;
+  height: 200rem;
 }
 
 .pos {
@@ -54,7 +54,7 @@
   /* transform: translateZ(-1000px); */
   /* transform: scaleZ(0.3); */
   transform: rotate(45deg) scale(0.5, 0.1);
-  transform: scale(1, 1.3) rotate(30deg); 
+  transform: scale(1, 1.3) rotate(30deg);
   transform: skew(30deg) scale(2) rotate(20deg);
   transform: rotate(45deg);
   /* transform: rotateZ(45deg); */
