--- a/test.scss
+++ b/test.scss
@@ -12,12 +12,15 @@
 
   border-radius: 20;
   box-sizing: border-box;
-  // border: { width, color, style 
+  // border: { width, color, style
   // npm:postcss-value-spread
   border: 1px solid red;
 
   padding: 1 1 2 2;
   margin: 1 1 2 2;
+
+  display: none;
+  position: absolute;
 
   z-index: 0;
   opacity: 1;
